# image_for_annotation_picker

./: .gitignore  CMakeLists.txt  COPYING  Info.plist  LICENSE  README.md  SETUP.md
src/: FrameCaptureSink.cpp  FrameCaptureSink.h  Logger.h  MainWindow.cpp  MainWindow.h  main.cpp
